--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,15 @@
 language: php
 
 php:
-  - 5.3.3
-  - 5.3
-  - 5.4
   - 5.5
   - 5.6
   - hhvm
+  - hhvm-nightly
 
 before_script:
-  - ./.travis.install.sh
+  - composer self-update
+  - composer update
 
 script:
-  - ./vendor/bin/phpunit --coverage-clover ./build/logs/clover.xml --exclude-group Performance
-  - php -n ./vendor/bin/phpunit --group=Performance
+  - ./vendor/bin/phpunit
   - ./vendor/bin/phpcs --standard=PSR2 ./src/ ./tests/
-
-matrix:
-  allow_failures:
-    - php: hhvm
