--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,11 @@
 {
-    "name":              "ocramius/proxy-manager",
-    "description":       "A library providing utilities to generate, instantiate and generally operate with Object Proxies",
+    "name":              "ocramius/ocramius",
+    "description":       "Ocramius is Ocramius - there's nothing more to say.",
     "type":              "library",
     "license":           "MIT",
-    "homepage":          "https://github.com/Ocramius/ProxyManager",
+    "homepage":          "https://github.com/Ocramius/Ocramius",
     "keywords":          [
-        "proxy",
-        "proxy pattern",
-        "service proxies",
-        "lazy loading",
-        "aop"
+        "ocramius"
     ],
     "authors": [
         {
@@ -19,35 +15,26 @@
         }
     ],
     "require": {
-        "php":                     ">=5.3.3",
-        "zendframework/zend-code": ">2.2.5,<3.0"
+        "php": ">=5.4"
     },
     "require-dev": {
-        "ext-phar":                    "*",
         "phpunit/phpunit":             "~4.0",
-        "squizlabs/php_codesniffer":   "1.5.*"
+        "squizlabs/php_codesniffer":   "2.0.*@ALPHA"
     },
-    "suggest": {
-        "zendframework/zend-stdlib":   "To use the hydrator proxy",
-        "ocramius/generated-hydrator": "To have very fast object to array to object conversion for ghost objects",
-        "zendframework/zend-xmlrpc": "To have the XmlRpc adapter (Remote Object feature)",
-        "zendframework/zend-json": "To have the JsonRpc adapter (Remote Object feature)",
-        "zendframework/zend-soap": "To have the Soap adapter (Remote Object feature)"
-    },
+    "suggest": {},
     "autoload": {
         "psr-0": {
-            "ProxyManager\\": "src"
+            "Ocramius\\": "src"
         }
     },
     "autoload-dev": {
         "psr-0": {
-            "ProxyManagerTest\\": "tests",
-            "ProxyManagerTestAsset\\": "tests"
+            "OcramiusTest\\": "test"
         }
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.6.x-dev"
+            "dev-master": "1.1.x-dev"
         }
     }
 }
