--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4"
+        "php":                        ">=5.5",
+        "zendframework/zend-console": "~2.3"
     },
     "require-dev": {
         "phpunit/phpunit":             "~4.0",
