--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
         }
     ],
     "require": {
-        "php":                        ">=5.5",
-        "zendframework/zend-console": "~2.3"
+        "php":                          ">=5.5",
+        "zendframework/zend-console":   "~2.3",
+        "zendframework/zend-validator": "~2.3"
     },
     "require-dev": {
         "phpunit/phpunit":             "~4.0",
