--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "require": {
         "php":                          ">=5.5",
         "zendframework/zend-console":   "~2.3",
-        "zendframework/zend-validator": "~2.3"
+        "zendframework/zend-validator": "~2.3",
+        "zendframework/zend-uri":       "~2.3"
     },
     "require-dev": {
         "phpunit/phpunit":             "~4.0",
