--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "php":                          ">=5.5",
         "zendframework/zend-console":   "~2.3",
         "zendframework/zend-validator": "~2.3",
-        "zendframework/zend-uri":       "~2.3"
+        "zendframework/zend-uri":       "~2.3",
+        "zendframework/zend-http": "~2.3"
     },
     "require-dev": {
         "phpunit/phpunit":             "~4.0",
