--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
 language: php
 
 php:
-  - 5.5
   - 5.6
   - hhvm
   - hhvm-nightly
 
 before_script:
-  - composer self-update
-  - composer update
+  - composer install
 
 script:
   - ./vendor/bin/phpunit
